making the class JDK 8.0 compatible.